# getschoolled

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.txt  LICENSE  Makefile  NOTICE.txt  README.md  SECURITY.txt  VERSION  build-info.txt  requirements-dev.txt  ruff.toml  salareen-kubeconfig.decoded.yaml  salareen-kubeconfig.yaml
apps/agent-runtime/: Dockerfile  conftest.py  pyproject.toml  requirements.txt
apps/agent-runtime/agent_runtime/: __init__.py  worker.py
apps/agent-runtime/edge/: Dockerfile.edge  manifest.yaml  package_edge.sh
apps/agent-runtime/src/agent_runtime/: __init__.py  brain.py  worker.py
apps/agent-runtime/tests/: conftest.py  test_brain.py  test_worker.py
config/: cloud.env  local.env
docs/: P-Deck1.m4a  P-Deck2.m4a  P-Deck3.m4a  aoeplx-format.txt  api-cost-value.txt  api-reference.txt  api-use-cases.txt  architecture.txt  capacity-projection.txt  cloud-agent-task.txt  edge-robot-runbook.txt  foresight.txt  hosting-decision-matrix.txt  hosting.txt  integrations-jobs-careers.txt  investor-value.txt  payments-and-security.txt  payments.txt  plan.txt  release-testing.txt  run-local.txt  scalability.txt  secrets.txt  theodore-presenter.txt
legal/: ACCEPTABLE_USE.txt  DISCLAIMER.txt  DPA.txt  PRIVACY.txt  SWEEPSTAKES.txt  TERMS.txt
marketing/: research_brief.txt
qa/: RUNBOOK.txt  loadtest.py  regression.py  stress.py
scripts/: PRESENTER_RUNBOOK.txt  build_bayon_icons.py  build_brand_assets.py  build_cognitive_pack.py  build_knowledge_base.py  build_knowledge_db.py  build_ksb.py  build_mascot_bases.py  build_release.py  build_salarean_brand.py  build_salareen_concepts.py  build_salareen_logo.py  build_scenario_catalog.py  bump_pr_version.py  capacity_projection.py  check_api_docs.py  check_curriculum_depth.py  check_pr_version_bump.sh  datamine_market.py  demo_ai_fluency.py  dev_down.sh  dev_origin_proxy.py  dev_status.sh  dev_up.sh  generate_locale_mascots.py  generate_pitch_video.py  generate_salareen_mobile_icon.py  github_configure_kubeconfig.sh  k8s_verify_memory.sh  (+21 more)
services/curriculum/: Dockerfile  pyproject.toml  requirements.txt
services/curriculum/app/: __init__.py  main.py
services/curriculum/src/curriculum/: __init__.py  audio_catalog_bridge.py  catalog.py  decks.py  ingest.py  interchange.py  learnable_service.py  main.py  recommend_service.py
services/curriculum/tests/: conftest.py  test_ad_breaks_api.py  test_audio_catalog_fallback.py  test_audio_courses_api.py  test_audio_i18n_api.py  test_catalog.py  test_catalog_api.py  test_cograde_api.py  test_corrections_api.py  test_corrections_apply.py  test_course_search_api.py  test_curriculum.py  test_decks.py  test_delivery_mode_api.py  test_health.py  test_home_rails_api.py  test_homework_authorship_api.py  test_homework_generate_api.py  test_homework_grade_api.py  test_homework_internal_only.py  test_homework_scan_api.py  test_ingest.py  test_interchange_api.py  test_internal_auth_corrections.py  test_jobs_api.py  test_learnable_search_api.py  test_market_api.py  test_notifications_api.py  test_provenance_api.py  test_recommend_api.py  test_recommend_cold_start.py  test_report_api.py  test_scenes_api.py  test_scoring_admin_api.py  test_skills_taxonomy_api.py  test_validation_api.py
services/memory/: Dockerfile  pyproject.toml
services/memory/app/: __init__.py  main.py
services/memory/src/memory/: __init__.py  main.py  store.py
services/memory/tests/: conftest.py  test_behavior.py  test_flags_api.py  test_flags_exhaustive.py  test_health.py  test_internal_auth_retention.py  test_legal_compliance_api.py  test_mascots_api.py  test_memory.py  test_onboarding_survey_api.py  test_pulse_survey_api.py  test_retention_store.py  test_survey_api.py  test_telemetry_endpoints.py  test_test_hooks_api.py  test_version_meta_api.py
services/orchestrator/: Dockerfile  pyproject.toml  requirements.txt
services/orchestrator/app/: __init__.py  curriculum.py  director.py  main.py  rag.py
services/orchestrator/src/orchestrator/: __init__.py  curriculum.py  director.py  main.py  memory_client.py  sessions.py  teaching.py  training.py
services/orchestrator/tests/: conftest.py  test_adaptive.py  test_agent_reward.py  test_api.py  test_assessment.py  test_director_adaptation.py  test_disclosure_api.py  test_embody_api.py  test_groundedness_api.py  test_group_classes_api.py  test_hil_api.py  test_internal_auth_admin.py  test_lesson_depth_api.py  test_live_loop_e2e.py  test_lx_tick_api.py  test_memory_client.py  test_optimization_api.py  test_orchestrator.py  test_phase45_api.py  test_presenter_api.py  test_reengage_api.py  test_sessions_store.py  test_slang_api.py  test_teaching_api.py  test_training_api.py
services/perception/: Dockerfile  conftest.py  pyproject.toml  requirements.txt
services/perception/app/: __init__.py  main.py
services/perception/src/perception/: __init__.py  main.py
services/perception/tests/: _assets.py  conftest.py  test_emotion_gate.py  test_engagement.py  test_face_gallery.py  test_face_recognition.py  test_health.py  test_identify_api.py  test_identify_embedding.py  test_internal_auth_enroll.py  test_perception.py
(+413 files in other folders)
