[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aoep-curriculum"
version = "0.1.0"
description = "Content/CMS API + RAG retrieval over curriculum."
requires-python = ">=3.11"
dependencies = [
  "aoep-shared",
  "fastapi>=0.111,<0.116",
  "uvicorn[standard]>=0.30,<0.35",
  "python-multipart==0.0.32",
  # Content scraper (textbooks / web / video transcripts) -> decks.
  "pypdf==4.2.0",
  "beautifulsoup4==4.12.3",
  "requests==2.32.3",
]

[project.optional-dependencies]
# fpdf2 is test-only: it generates the PDF fixtures the scraper tests feed to
# extract_pdf / the /ingest/pdf endpoint (CI installs this extra, not
# requirements-dev.txt).
test = ["pytest>=8.2,<9", "httpx>=0.27,<0.28", "fpdf2==2.7.9"]
# Optional runtime dep for /ingest/youtube (import-guarded; not needed for tests).
youtube = ["youtube-transcript-api>=0.6,<1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
